# kordocqa

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  PLANS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260312_0001_m0_m1_init.py
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/v1/: admin.py  evals.py  health.py  query.py  retrieve.py
app/core/: config.py  logging.py  tracing.py
app/db/: __init__.py  session.py
app/db/repositories/: __init__.py  retrieval.py
app/evals/datasets/: ko_sample_eval.jsonl
app/models/: __init__.py  document.py  document_chunk.py
app/prompts/: __init__.py  answer_schema.json  query_answer_v1.txt  query_answer_v2.txt
app/schemas/: __init__.py  admin.py  common.py  evals.py  query.py  retrieval.py
app/services/: __init__.py  chunking.py  embeddings.py  evals.py  ingestion.py  llm.py  qa.py  reranking.py  retrieval.py
app/services/parsers/: __init__.py  base.py  docx_parser.py  factory.py  html_parser.py  pdf_parser.py  txt_parser.py
tests/smoke/: test_admin_upload.py  test_app_boot.py  test_evals.py  test_health.py  test_health_dependencies.py  test_query.py  test_retrieve.py
tests/unit/: test_admin_auth.py  test_chunking.py  test_config.py  test_evals_service.py  test_ingestion_service.py  test_parsers.py  test_qa_service.py  test_retrieval_service.py
