[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kordocqa"
version = "0.1.0"
description = "Production-lean Korean document RAG QA backend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "alembic>=1.14.0,<2.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pgvector>=0.3.6,<1.0.0",
  "redis>=5.2.0,<6.0.0",
  "httpx>=0.28.0,<1.0.0",
  "structlog>=24.4.0,<26.0.0",
  "python-multipart>=0.0.12,<1.0.0",
  "pypdf>=5.1.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.11.0,<0.16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
  "app",
  "alembic",
  "alembic.ini",
  "README.md",
  "PLANS.md",
  "docker-compose.yml",
  "Dockerfile",
  "Makefile",
  ".env.example",
  ".github/workflows/ci.yml",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["UP007", "UP042", "UP045"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
